2011-08-09: solr-show-fields.py
	* Solr のスキーマの XML から表を作成する。

2011-07-22: doc-wrapper.py
	* rst2html で生成した HTML の中身を他のテンプレートシステムにポーティング。

2011-07-20: solr-document-indexer.py
	* Solr にインデクス生成リクエストを投げる。

2011-06-26: mysql-schema-dumper.py,config.ini
	* MySQL のテーブル情報を HTML に書き出す。

2011-06-17: compare-linkage.cpp,compare-linkage.makefile,helloworld.cpp,helloworld.h

	* 共有ライブラリと静的リンクの違いを確認する。

2011-06-13: sandboxlib.py

	* Utility script, argument parser and timezone config.

2011-05-06: yaml2config.py,config.yaml
	* YAML の設定ファイルから指定されたセクションを抜き出す。

2011-05-01: encoding_sample.py
	* Python で標準出力をリダイレクトした場合のエンコーディングを確認する。

2011-04-29: profiler_sample.py
	* Python のプロファイラモジュールを使ってみる。

2011-03-16: conv-jleague-stadium-name.hs
	* CSV のフィールドの文字列を書き換える。

2011-03-14: convert-jleague-club-name.py
	* J リーグのクラブ名を変換する。

2011-03-13: cat.hs
	* Haskell で cat コマンド。

2011-03-12: convert-jleague-calendar.py,calendar-J1.txt,calendar-J2.txt
	* J リーグの日程表を CSV に変換する。

2011-03-11: simple-usage-twisted-dbapi.py
	* Twisted の dbapi を使ってみる。

2011-02-22: csv2icalendar.py,csv2icalendar.csv
	* CSV の予定を iCalendar に変換する。

2011-02-16: simple-usage-jqueryui-datepicker.js,simple-usage-jqueryui-datepicker.html
	* jQueryUI の DatePicker のサンプル。

2011-02-15: simple-usage-datajs.js,simple-usage-datajs.html,simple-usage-datajs.atom
	* datajs を使って OData のサンプル。

2011-02-14: http-server.py
	* テスト用の静的コンテンツ配信 HTTP サーバ。

2011-02-07: simple-usage-selenium-screen-capture.py
	* Selenium を使ってユニットテストとスクリーンキャプチャ。

2011-02-03: hello.hs
	* Haskell で Hello world 。

2011-02-01: simple-usage-beautifulsoup.py
	* BeautifulSoup を使って HTML をパースする。

2011-01-26: remove-pyc-files.sh
	* .pyc ファイルを掃除する。

2011-01-20: simple-usage-jinja2-extends.py,base.html,page1.html,page2.html
	* jinja2 の extends を使ってみる。

2011-01-09: peg-game.py,peg-game-1.txt,peg-game-2.txt [facebook hackers cup]
	* Peg Game を表示する。

2011-01-09: solve-double-square.py [facebook hackers cup]
	* Double Square を解く。

2011-01-07: newprj-python.py [project]